FIX: Added overflow auto to board index to fix scroll-jump on open popover

--- a/frontend/src/assets/styles/views/_board-index.scss
+++ b/frontend/src/assets/styles/views/_board-index.scss
@@ -3,4 +3,5 @@
   height: calc(100vh - 48px);
   font-size: rem(14px);
   color: $card-title;
+  overflow: auto;
 }
